cmake_minimum_required(VERSION 3.20)

set(p "stack")
project(p)

set(${p}_SOURCES
stack.cpp
)

set(${p}_HEADERS
stack.hpp
)

add_library(${p} STATIC ${${p}_SOURCES} ${${p}_HEADERS})
set_target_properties(${p} PROPERTIES LINKER_LANGUAGE CXX)
target_compile_options(${p} PRIVATE -Wall -Wextra -Werror -Wpedantic)
